--- a/Rayos X/graficosrecuperado.ipynb
+++ b/Rayos X/graficosrecuperado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 634,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 635,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 636,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "Text(0, 0.5, 'del +/- ')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 636,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 637,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "Text(0, 0.5, 'del +/- ')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 637,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 638,
    "metadata": {},
    "outputs": [
     {
@@ -149,22 +149,53 @@
     }
    ],
    "source": [
-    "for i in range(len(x_Bragg)):\n",
+    "for i in range(len(xf)):\n",
     "    if y[i] == max(y):\n",
     "        x_valan = x_Bragg[i]\n",
     "        \n",
-    "for i in range(len(x_Bragg)):\n",
+    "for i in range(len(xf)):\n",
     "    if y[i] == 1795:\n",
     "        y_valan = x_Bragg[i]     \n",
     "           \n",
-    "#print(x_valan)\n",
+    "print(x_valan)\n",
     "\n",
-    "#print(y_valan)"
+    "print(y_valan)\n",
+    "\n",
+    "sigmalambdaa = 2*0.1*d*np.cos((x_valan*np.pi/180))\n",
+    "#print(sigmalambdaa)\n",
+    "sigmalambdab = 2*0.1*d*np.cos((y_valan*np.pi/180))\n",
+    "#print(sigmalambdab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 639,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8016.20720974847"
+      ]
+     },
+     "execution_count": 639,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h = 6.6310*(10**(-34))\n",
+    "c = 299792458\n",
+    "eV = 6.242*(10**(18))\n",
+    "la = 1.39*(10**(-10))\n",
+    "E = (h*c/y_valan)*eV\n",
+    "Error = (h*c/(x_valan))*eV\n",
+    "Error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 640,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +204,7 @@
        "Text(0, 0.5, 'del R(30kV)/Imp/s ')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 640,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -204,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 641,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +244,7 @@
        "Text(0, 0.5, 'del R(30kV)/Imp/s ')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 641,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 642,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +284,7 @@
        "Text(0, 0.5, 'del R(30kV)/Imp/s ')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 642,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -284,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 643,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +324,7 @@
        "Text(0, 0.5, 'del R(30kV)/Imp/s ')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 643,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -323,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 644,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +363,7 @@
        "Text(0, 0.5, 'del R(30kV)/Imp/s ')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 644,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -362,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 645,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +402,7 @@
        "Text(0, 0.5, 'del R(30kV)/Imp/s ')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 645,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -401,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 646,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 647,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +534,7 @@
        "Text(0, 0.5, 'del R(30kV)/Imp/s ')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 647,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -566,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 648,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 649,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 650,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 651,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 652,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +806,7 @@
        "67.68536546239221"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 652,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 653,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +827,7 @@
        "Text(0, 0.5, 'del R(35kV)/Imp/s ')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 653,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -894,16 +925,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 654,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12f746b10>"
+       "<matplotlib.legend.Legend at 0x17b769710>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 654,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -936,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 655,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 656,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1038,7 @@
        "66.42392464527269"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 656,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 657,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 658,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1159,7 @@
        "Text(0, 0.5, 'del R(35kV)/Imp/s ')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 658,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1175,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 659,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 660,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 661,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 662,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 663,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1379,7 @@
        "1.8746739891764226e-19"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 663,
      "metadata": {},
      "output_type": "execute_result"
     }
