--- a/Troque Magnético/Gráficas/graficos-3.ipynb
+++ b/Troque Magnético/Gráficas/graficos-3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1573d1210>"
+       "<matplotlib.collections.PathCollection at 0x168e60290>"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x147160390>"
+       "<matplotlib.collections.PathCollection at 0x1686ce1d0>"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "0.013545"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "38.80628629535412"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "0.4396201432645996"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,33 +350,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nm = lin_reg.slope()\\nerrm = lin_reg.err_slope()\\nI = np.array([1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.0])\\nerrmu = np.sqrt((((4*np.pi**2)/m)*0.1)**2 + (((4*(np.pi**2)*I)/m**2)*errm)**2 )\\nerrmu\\n'"
+       "0.00043801635057990175"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"\n",
+    "\n",
     "m = lin_reg.slope()\n",
     "errm = lin_reg.err_slope()\n",
-    "I = np.array([1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.0])\n",
-    "errmu = np.sqrt((((4*np.pi**2)/m)*0.1)**2 + (((4*(np.pi**2)*I)/m**2)*errm)**2 )\n",
+    "errmu = np.sqrt((((4*(np.pi**2)*I)/m**2)*errm)**2 )\n",
     "errmu\n",
-    "\"\"\""
+    "4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +466,7 @@
        "0.0012502166085827317"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
