--- a/Frank-Hertz/ejercicio7.ipynb
+++ b/Frank-Hertz/ejercicio7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x168307110>]"
+       "[<matplotlib.lines.Line2D at 0x1300c0390>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -49,8 +49,7 @@
     "    return l\n",
     "T1 = np.linspace(300,500)\n",
     "\n",
-    "plt.plot(T1,l(T1))\n",
-    " "
+    "plt.plot(T1,l(T1))"
    ]
   }
  ],
