Difraccion de electrones final

--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
     "\n",
     "\n",
     "import numpy as np\n",
-    "from linregress_w import linregress_w as linr\n",
+    "from linregress import linregress_w as linr\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "x=np.array([1,2,3,4,5])\n",
@@ -71,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
